--- a/server/package.json
+++ b/server/package.json
@@ -1,25 +1,18 @@
 {
-  "name": "server",
+  "name": "mojosgamelist",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Backend for MojosGameList",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Gary Simkins",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongodb": "^4.13.0"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.15",
-    "@types/node": "^18.11.17",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.8.2"
   }
 }
